@@ -1,3 +1,8 @@
+2024-03-31  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-ast.c (pkl_ast_handle_bconc_ass_stmt_1): Fix
+	reference counting in synthetized compount statement.
+
 2024-03-30  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/ios-dev-mmap.c (ios_dev_mmap_open): Avoid using variable
